--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "gitpython>=3.1.45",
     "jinja2>=3.1.6",
+    "numpy>=2.3.4",
     "pypandoc>=1.16",
     "pyyaml>=6.0.3",
     "rich>=14.2.0",
